# OpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ReadMe.MD
include/: stb_image.h
shaders/: fragment.glsl  light.fs  object.fs  object.vs  texture.fs  vertex.glsl
src/: camera_main.cpp  main.cpp  util.cpp
